--- a/csci340lab4/style.css
+++ b/csci340lab4/style.css
@@ -33,6 +33,7 @@ body {
     border-width: 1em;
     text-align: center;
     margin-top: 1em;
+    margin-bottom: 1em;
 }
 h2 {
     color: #746C9E;
