--- a/csci340lab4/style.css
+++ b/csci340lab4/style.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Playfair Display', serif;
 }
 #weatherbox {
-    margin: 0 px;
+    margin: 0;
     padding: 1em;
     background-color: #6076AB;
     color: #87CCC5;
