Changed background image to Little Rock

--- a/csci340lab5/_includes/footer.html
+++ b/csci340lab5/_includes/footer.html
@@ -1,11 +1,8 @@
 <div class="footer">
 	<div class="container">
-		<p class="copy">
-			&copy; {{ site.time | date: '%Y' }}
-			<a href="http://brianmaierjr.com">Brian Maier Jr.</a> Powered by
-			<a href="http://jekyllrb.com">Jekyll</a>
-		</p>
-
+		<p>Created by Jacob Collier-Tenison<br>
+			Template by <a href="http://brianmaierjr.com">Brian Maier Jr.</a><br>
+			Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
 		<div class="footer-links">
 			<ul class="noList">
 				{%- if site.social.facebook -%}
