--- a/csci340lab5/_includes/head.html
+++ b/csci340lab5/_includes/head.html
@@ -61,7 +61,7 @@
 	{%- else -%}
 	<meta
 		name="twitter:image:src"
-		content="{{ '/assets/img/touring.jpg' | prepend: site.url }}"
+		content="{{ '/assets/img/LittleRock.jpg' | prepend: site.url }}"
 	/>
 	{%- endif -%}
 
